--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "pnpm -r --if-present --parallel lint",
-    "lint-fix": "pnpm -r --if-present --parallel lint-fix"
+    "lint-fix": "pnpm -r --if-present --parallel lint-fix",
+    "build": "pnpm -r --if-present --parallel build"
   },
   "keywords": [],
   "author": "",
