--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,17 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+!eslint.config.js
+.mastra
+.aws-sam
+
+.DS_Store
