--- a/package.json
+++ b/package.json
@@ -2,14 +2,59 @@
   "name": "aws-mastra-agent-example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "bin": {
+    "platform": "bin/platform.js"
+  },
   "scripts": {
-    "lint": "pnpm -r --if-present --parallel lint",
-    "lint-fix": "pnpm -r --if-present --parallel lint-fix",
-    "build": "pnpm -r --if-present --parallel build"
+    "build": "tsc && mastra build",
+    "watch": "tsc -w",
+    "dev": "mastra dev",
+    "lint": "eslint",
+    "lint-fix": "eslint --fix"
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.2.9",
+    "@eslint/js": "^9.26.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@stylistic/eslint-plugin-js": "^4.2.0",
+    "@stylistic/eslint-plugin-plus": "^4.2.0",
+    "@stylistic/eslint-plugin-ts": "^4.2.0",
+    "@types/aws-lambda": "^8.10.149",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.3",
+    "@vitest/coverage-v8": "^3.1.3",
+    "aws-cdk": "^2.1013.0",
+    "esbuild": "^0.25.3",
+    "eslint": "^9.26.0",
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "mastra": "^0.6.0",
+    "pnpm": "^10.10.0",
+    "tslib": "^2.8.1",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.3"
+  },
+  "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^2.2.8",
+    "@ai-sdk/azure": "^1.3.22",
+    "@aws-lambda-powertools/logger": "^2.19.0",
+    "@mastra/core": "^0.9.1",
+    "@mastra/libsql": "^0.0.1",
+    "@mastra/mcp": "^0.4.1",
+    "@mastra/memory": "^0.3.1",
+    "aws-cdk-lib": "^2.194.0",
+    "constructs": "^10.4.2",
+    "express": "^5.1.0",
+    "langfuse-vercel": "^3.37.2",
+    "zod": "^3.24.4"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.9.0"
+  "packageManager": "pnpm@10.10.0"
 }
