--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,8 +2,8 @@ packages:
   - .
   - ./client
   - ./platform
-
 onlyBuiltDependencies:
+  - '@tailwindcss/oxide'
   - esbuild
   - onnxruntime-node
   - protobufjs
