--- a/client/package.json
+++ b/client/package.json
@@ -19,22 +19,25 @@
     "@stylistic/eslint-plugin-jsx": "^4.2.0",
     "@stylistic/eslint-plugin-plus": "^4.2.0",
     "@stylistic/eslint-plugin-ts": "^4.2.0",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^22.15.14",
+    "@types/node": "^22.15.17",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.26.0",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-solid": "^0.14.5",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.0",
-    "vite": "^6.1.6",
-    "vite-plugin-pages": "^0.32.5",
+    "vite": "^6.3.5",
     "vite-plugin-solid": "^2.11.6"
   },
   "dependencies": {
+    "@ai-sdk/ui-utils": "^1.2.11",
+    "@mastra/client-js": "^0.1.21",
     "@solidjs/router": "^0.15.3",
     "crypto-js": "^4.2.0",
     "solid-js": "^1.9.6",
