--- a/platform/package.json
+++ b/platform/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "tsc && mastra build",
+    "clean": "tsc --build --clean",
     "watch": "tsc -w",
     "dev": "mastra dev",
     "lint": "eslint",
@@ -22,15 +23,15 @@
     "@stylistic/eslint-plugin-ts": "^4.2.0",
     "@types/aws-lambda": "^8.10.149",
     "@types/express": "^5.0.1",
-    "@types/node": "^22.15.14",
+    "@types/node": "^22.15.17",
     "@vitest/coverage-v8": "^3.1.3",
-    "aws-cdk": "^2.1013.0",
+    "aws-cdk": "^2.1014.0",
     "esbuild": "^0.25.4",
     "eslint": "^9.26.0",
     "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-promise": "^7.2.1",
-    "mastra": "^0.6.1",
+    "mastra": "^0.6.2",
     "tslib": "^2.8.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
@@ -42,11 +43,11 @@
     "@ai-sdk/amazon-bedrock": "^2.2.9",
     "@ai-sdk/azure": "^1.3.23",
     "@aws-lambda-powertools/logger": "^2.19.1",
-    "@mastra/core": "^0.9.2",
+    "@mastra/core": "^0.9.3",
     "@mastra/libsql": "^0.0.1",
-    "@mastra/mcp": "^0.4.2",
-    "@mastra/memory": "^0.3.2",
-    "aws-cdk-lib": "^2.194.0",
+    "@mastra/mcp": "^0.4.3",
+    "@mastra/memory": "^0.3.3",
+    "aws-cdk-lib": "^2.195.0",
     "constructs": "^10.4.2",
     "express": "^5.1.0",
     "langfuse-vercel": "^3.37.2",
