--- a/platform/package.json
+++ b/platform/package.json
@@ -24,6 +24,7 @@
     "@types/aws-lambda": "^8.10.149",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.18",
+    "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.1.3",
     "aws-cdk": "^2.1016.0",
     "esbuild": "^0.25.4",
@@ -43,14 +44,23 @@
     "@ai-sdk/amazon-bedrock": "^2.2.9",
     "@ai-sdk/azure": "^1.3.23",
     "@aws-lambda-powertools/logger": "^2.19.1",
+    "@aws-sdk/client-dynamodb": "^3.812.0",
+    "@aws-sdk/lib-dynamodb": "^3.812.0",
+    "@aws-sdk/util-dynamodb": "^3.812.0",
+    "@hono/node-server": "^1.14.1",
     "@mastra/core": "^0.9.4",
     "@mastra/libsql": "^0.0.1",
     "@mastra/mcp": "^0.5.0",
     "@mastra/memory": "^0.3.4",
+    "@modelcontextprotocol/sdk": "^1.11.4",
     "aws-cdk-lib": "^2.196.0",
     "constructs": "^10.4.2",
     "express": "^5.1.0",
+    "fetch-to-node": "^2.1.0",
+    "hono": "^4.7.10",
+    "jsonwebtoken": "^9.0.2",
     "langfuse-vercel": "^3.37.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4"
   }
 }
