--- a/platform/package.json
+++ b/platform/package.json
@@ -17,26 +17,27 @@
   "devDependencies": {
     "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.27.0",
-    "@stylistic/eslint-plugin": "^4.2.0",
-    "@stylistic/eslint-plugin-js": "^4.2.0",
-    "@stylistic/eslint-plugin-plus": "^4.2.0",
-    "@stylistic/eslint-plugin-ts": "^4.2.0",
+    "@stylistic/eslint-plugin": "^4.4.0",
+    "@stylistic/eslint-plugin-js": "^4.4.0",
+    "@stylistic/eslint-plugin-plus": "^4.4.0",
+    "@stylistic/eslint-plugin-ts": "^4.4.0",
     "@types/aws-lambda": "^8.10.149",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.2",
-    "@types/node": "^22.15.21",
+    "@types/node": "^22.15.23",
     "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.1.4",
     "aws-cdk": "^2.1016.1",
-    "esbuild": "^0.25.4",
+    "esbuild": "^0.25.5",
     "eslint": "^9.27.0",
-    "eslint-import-resolver-typescript": "^4.3.5",
+    "eslint-import-resolver-typescript": "^4.4.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-promise": "^7.2.1",
-    "mastra": "^0.10.0",
+    "mastra": "^0.10.1",
     "tslib": "^2.8.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
+    "typescript-eslint": "^8.33.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.4"
   },
@@ -44,23 +45,25 @@
     "@ai-sdk/amazon-bedrock": "^2.2.9",
     "@ai-sdk/azure": "^1.3.23",
     "@aws-lambda-powertools/logger": "^2.20.0",
-    "@aws-sdk/client-dynamodb": "^3.812.0",
-    "@aws-sdk/lib-dynamodb": "^3.814.0",
-    "@aws-sdk/util-dynamodb": "^3.812.0",
-    "@hono/node-server": "^1.14.2",
-    "@mastra/core": "^0.10.0",
+    "@aws-sdk/client-dynamodb": "^3.817.0",
+    "@aws-sdk/client-ssm": "^3.817.0",
+    "@aws-sdk/lib-dynamodb": "^3.817.0",
+    "@aws-sdk/util-dynamodb": "^3.817.0",
+    "@hono/node-server": "^1.14.3",
+    "@mastra/core": "^0.10.1",
     "@mastra/libsql": "^0.10.0",
-    "@mastra/mcp": "^0.10.0",
-    "@mastra/memory": "^0.10.0",
-    "@modelcontextprotocol/sdk": "^1.11.5",
-    "aws-cdk-lib": "^2.197.0",
+    "@mastra/mcp": "^0.10.1",
+    "@mastra/memory": "^0.10.1",
+    "@modelcontextprotocol/sdk": "^1.12.0",
+    "aws-cdk-lib": "^2.199.0",
     "constructs": "^10.4.2",
+    "crypto-js": "^4.2.0",
     "express": "^5.1.0",
     "fetch-to-node": "^2.1.0",
     "hono": "^4.7.10",
     "jsonwebtoken": "^9.0.2",
-    "langfuse-vercel": "^3.37.2",
+    "langfuse-vercel": "^3.37.3",
     "uuid": "^11.1.0",
-    "zod": "^3.25.20"
+    "zod": "^3.25.32"
   }
 }
