--- a/platform/package.json
+++ b/platform/package.json
@@ -16,50 +16,50 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
-    "@eslint/js": "^9.30.0",
+    "@eslint/js": "^9.30.1",
+    "@hono/mcp": "^0.1.0",
+    "@hono/node-server": "^1.15.0",
     "@stylistic/eslint-plugin": "^5.1.0",
     "@types/aws-lambda": "^8.10.150",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
-    "@types/node": "^22.15.34",
+    "@types/node": "^22.16.0",
     "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "aws-cdk": "^2.1019.2",
+    "aws-cdk": "^2.1020.1",
     "esbuild": "^0.25.5",
-    "eslint": "^9.30.0",
+    "eslint": "^9.30.1",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-promise": "^7.2.1",
-    "mastra": "^0.10.8",
+    "mastra": "^0.10.9",
     "tslib": "^2.8.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
+    "typescript-eslint": "^8.35.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^2.2.10",
+    "@ai-sdk/amazon-bedrock": "^2.2.11",
     "@ai-sdk/azure": "^1.3.23",
     "@aws-lambda-powertools/logger": "^2.22.0",
-    "@aws-sdk/client-dynamodb": "^3.839.0",
-    "@aws-sdk/client-ssm": "^3.839.0",
-    "@aws-sdk/lib-dynamodb": "^3.839.0",
-    "@aws-sdk/util-dynamodb": "^3.839.0",
-    "@hono/node-server": "^1.14.4",
-    "@mastra/core": "^0.10.8",
+    "@aws-sdk/client-dynamodb": "^3.840.0",
+    "@aws-sdk/client-ssm": "^3.840.0",
+    "@aws-sdk/lib-dynamodb": "^3.840.0",
+    "@aws-sdk/util-dynamodb": "^3.840.0",
+    "@mastra/core": "^0.10.9",
     "@mastra/libsql": "^0.10.3",
     "@mastra/mcp": "^0.10.5",
     "@mastra/memory": "^0.10.4",
-    "@modelcontextprotocol/sdk": "^1.13.2",
-    "aws-cdk-lib": "^2.202.0",
+    "@modelcontextprotocol/sdk": "^1.13.3",
+    "aws-cdk-lib": "^2.203.0",
     "constructs": "^10.4.2",
     "crypto-js": "^4.2.0",
     "express": "^5.1.0",
-    "fetch-to-node": "^2.1.0",
     "hono": "^4.8.3",
-    "jsonwebtoken": "^9.0.2",
-    "langfuse-vercel": "^3.37.6",
+    "jose": "^6.0.11",
+    "langfuse-vercel": "^3.38.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.67"
   }
