--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,7 @@ updates:
       - '/'
       - '/client/'
       - '/platform/'
+      - '/platform/function/'
     schedule:
       interval: daily
       timezone: Asia/Tokyo
