--- a/client/package.json
+++ b/client/package.json
@@ -12,31 +12,32 @@
     "lint-fix": "eslint --fix"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.3.1",
-    "@eslint/js": "^9.32.0",
-    "@stylistic/eslint-plugin": "^5.2.2",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@eslint/compat": "^1.3.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.33.0",
+    "@stylistic/eslint-plugin": "^5.2.3",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^22.17.0",
+    "@types/node": "^22.17.2",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.32.0",
+    "eslint": "^9.33.0",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-solid": "^0.14.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^6.3.5",
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2",
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
     "@ai-sdk/ui-utils": "^1.2.11",
-    "@mastra/client-js": "^0.10.18",
+    "@mastra/client-js": "^0.10.21",
     "@solidjs/router": "^0.15.3",
     "crypto-js": "^4.2.0",
-    "solid-js": "^1.9.7",
+    "solid-js": "^1.9.9",
     "solid-markdown": "^2.0.14"
   }
 }
