--- a/platform/function/package.json
+++ b/platform/function/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "@cloudfront-cdn-template/function",
+  "name": "function",
   "version": "0.1.0",
-  "bin": "bin/cloudfront-cdn-template.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "lint": "eslint *.ts ",
-    "style-check": "prettier --write ",
-    "format": "prettier --write ",
-    "fix": "prettier --write  && eslint --fix *.ts "
+    "lint": "eslint",
+    "fix": "eslint --fix"
   },
   "devDependencies": {
-    "typescript": "^5.8.3"
+    "@eslint/compat": "^1.3.2",
+    "@eslint/js": "^9.33.0",
+    "@stylistic/eslint-plugin": "^5.2.3",
+    "eslint": "^9.33.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.1"
   }
 }
