--- a/platform/package.json
+++ b/platform/package.json
@@ -15,49 +15,50 @@
     "lint-fix": "eslint --fix"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.3.1",
-    "@eslint/js": "^9.32.0",
+    "@eslint/compat": "^1.3.2",
+    "@eslint/js": "^9.33.0",
     "@hono/mcp": "^0.1.1",
-    "@hono/node-server": "^1.18.1",
-    "@stylistic/eslint-plugin": "^5.2.2",
+    "@hono/node-server": "^1.18.2",
+    "@stylistic/eslint-plugin": "^5.2.3",
     "@types/aws-lambda": "^8.10.152",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
-    "@types/node": "^22.17.0",
+    "@types/node": "^22.17.2",
     "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "aws-cdk": "^2.1023.0",
-    "esbuild": "^0.25.8",
-    "eslint": "^9.32.0",
+    "aws-cdk": "^2.1025.0",
+    "cdk-ecr-deployment": "^4.0.1",
+    "esbuild": "^0.25.9",
+    "eslint": "^9.33.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-promise": "^7.2.1",
-    "mastra": "^0.10.18",
+    "mastra": "^0.10.21",
     "tslib": "^2.8.1",
-    "tsx": "^4.20.3",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.38.0",
+    "typescript-eslint": "^8.39.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^2.2.12",
-    "@ai-sdk/azure": "^1.3.24",
-    "@aws-lambda-powertools/logger": "^2.24.1",
-    "@aws-sdk/client-dynamodb": "^3.859.0",
-    "@aws-sdk/client-ssm": "^3.859.0",
-    "@aws-sdk/lib-dynamodb": "^3.859.0",
-    "@aws-sdk/util-dynamodb": "^3.859.0",
-    "@mastra/core": "^0.11.1",
-    "@mastra/libsql": "^0.11.2",
-    "@mastra/mcp": "^0.10.9",
-    "@mastra/memory": "^0.11.5",
-    "@modelcontextprotocol/sdk": "^1.17.1",
-    "aws-cdk-lib": "^2.208.0",
+    "@ai-sdk/azure": "^1.3.25",
+    "@aws-lambda-powertools/logger": "^2.25.1",
+    "@aws-sdk/client-dynamodb": "^3.868.0",
+    "@aws-sdk/client-ssm": "^3.864.0",
+    "@aws-sdk/lib-dynamodb": "^3.868.0",
+    "@aws-sdk/util-dynamodb": "^3.868.0",
+    "@mastra/core": "^0.13.2",
+    "@mastra/libsql": "^0.13.2",
+    "@mastra/mcp": "^0.10.11",
+    "@mastra/memory": "^0.12.2",
+    "@modelcontextprotocol/sdk": "^1.17.3",
+    "aws-cdk-lib": "^2.211.0",
     "constructs": "^10.4.2",
     "crypto-js": "^4.2.0",
     "express": "^5.1.0",
-    "hono": "^4.8.12",
+    "hono": "^4.9.2",
     "jose": "^6.0.12",
     "langfuse-vercel": "^3.38.4",
     "uuid": "^11.1.0",
