--- a/platform/package.json
+++ b/platform/package.json
@@ -26,35 +26,37 @@
     "@types/node": "^22.18.6",
     "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "aws-cdk": "^2.1029.2",
+    "aws-cdk": "^2.1029.3",
     "cdk-ecr-deployment": "^4.0.3",
     "esbuild": "^0.25.10",
     "eslint": "^9.36.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-promise": "^7.2.1",
+    "jiti": "^2.6.0",
     "mastra": "^0.13.2",
     "tslib": "^2.8.1",
-    "tsx": "^4.20.5",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^3.0.22",
-    "@ai-sdk/azure": "^2.0.33",
-    "@aws-lambda-powertools/logger": "^2.26.1",
-    "@aws-sdk/client-dynamodb": "^3.895.0",
-    "@aws-sdk/client-ssm": "^3.895.0",
-    "@aws-sdk/lib-dynamodb": "^3.895.0",
-    "@aws-sdk/util-dynamodb": "^3.895.0",
+    "@ai-sdk/amazon-bedrock": "^2.2.12",
+    "@ai-sdk/azure": "^1.3.25",
+    "@aws-lambda-powertools/logger": "^2.27.0",
+    "@aws-sdk/client-dynamodb": "^3.896.0",
+    "@aws-sdk/client-ssm": "^3.896.0",
+    "@aws-sdk/lib-dynamodb": "^3.896.0",
+    "@aws-sdk/util-dynamodb": "^3.896.0",
     "@mastra/core": "^0.18.0",
     "@mastra/libsql": "^0.14.3",
+    "@mastra/loggers": "^0.10.13",
     "@mastra/mcp": "^0.13.1",
     "@mastra/memory": "^0.15.3",
-    "@modelcontextprotocol/sdk": "^1.18.1",
-    "aws-cdk-lib": "^2.216.0",
+    "@modelcontextprotocol/sdk": "^1.18.2",
+    "aws-cdk-lib": "^2.217.0",
     "constructs": "^10.4.2",
     "crypto-js": "^4.2.0",
     "express": "^5.1.0",
