--- a/platform/package.json
+++ b/platform/package.json
@@ -16,51 +16,52 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
-    "@eslint/js": "^9.36.0",
+    "@eslint/core": "^0.16.0",
+    "@eslint/js": "^9.37.0",
     "@hono/mcp": "^0.1.4",
     "@hono/node-server": "^1.19.5",
     "@stylistic/eslint-plugin": "^5.4.0",
-    "@types/aws-lambda": "^8.10.153",
+    "@types/aws-lambda": "^8.10.155",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/node": "^22.18.8",
     "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "aws-cdk": "^2.1029.3",
+    "aws-cdk": "^2.1029.4",
     "cdk-ecr-deployment": "^4.0.3",
     "esbuild": "^0.25.10",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-promise": "^7.2.1",
-    "jiti": "^2.6.0",
-    "mastra": "^0.13.3",
+    "jiti": "^2.6.1",
+    "mastra": "^0.15.0",
     "tslib": "^2.8.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0",
+    "typescript-eslint": "^8.46.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^2.2.12",
-    "@ai-sdk/azure": "^1.3.25",
+    "@ai-sdk/amazon-bedrock": "^3.0.31",
+    "@ai-sdk/azure": "^2.0.45",
     "@aws-lambda-powertools/logger": "^2.27.0",
-    "@aws-sdk/client-dynamodb": "^3.899.0",
-    "@aws-sdk/client-ssm": "^3.899.0",
-    "@aws-sdk/lib-dynamodb": "^3.899.0",
-    "@aws-sdk/util-dynamodb": "^3.899.0",
-    "@mastra/core": "^0.18.0",
-    "@mastra/libsql": "^0.14.3",
-    "@mastra/loggers": "^0.10.14",
-    "@mastra/mcp": "^0.13.2",
-    "@mastra/memory": "^0.15.4",
-    "@modelcontextprotocol/sdk": "^1.18.2",
-    "aws-cdk-lib": "^2.218.0",
+    "@aws-sdk/client-dynamodb": "^3.902.0",
+    "@aws-sdk/client-ssm": "^3.901.0",
+    "@aws-sdk/lib-dynamodb": "^3.902.0",
+    "@aws-sdk/util-dynamodb": "^3.902.0",
+    "@mastra/core": "^0.20.1",
+    "@mastra/libsql": "^0.15.1",
+    "@mastra/loggers": "^0.10.15",
+    "@mastra/mcp": "^0.13.4",
+    "@mastra/memory": "^0.15.6",
+    "@modelcontextprotocol/sdk": "^1.19.1",
+    "aws-cdk-lib": "^2.219.0",
     "constructs": "^10.4.2",
     "crypto-js": "^4.2.0",
     "express": "^5.1.0",
-    "hono": "^4.9.9",
+    "hono": "^4.9.10",
     "jose": "^6.1.0",
     "langfuse-vercel": "^3.38.5",
     "uuid": "^11.1.0",
