--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -17,3 +17,5 @@ overrides:
   glob@>=10.3.7 <=11.0.3: '>=11.1.0'
   hono@>=4.8.0 <4.9.6: '>=4.9.6'
   jsondiffpatch@<0.7.2: '>=0.7.2'
+  seroval@<1.4.1: '>=1.4.1'
+  seroval@<=1.4.0: '>=1.4.1'
