--- a/platform/package.json
+++ b/platform/package.json
@@ -28,33 +28,35 @@
     "@vitest/coverage-v8": "^4.0.18",
     "aws-cdk": "^2.1103.0",
     "cdk-ecr-deployment": "^4.0.6",
-    "esbuild": "^0.25.12",
+    "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-promise": "^7.2.1",
     "jiti": "^2.6.1",
-    "mastra": "^0.18.9",
+    "mastra": "^1.0.1",
     "tslib": "^2.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.1",
-    "vite-tsconfig-paths": "^5.1.4",
+    "vite-tsconfig-paths": "^6.0.5",
     "vitest": "^4.0.18"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^3.0.73",
-    "@ai-sdk/azure": "^2.0.91",
+    "@ai-sdk/amazon-bedrock": "^4.0.30",
+    "@ai-sdk/azure": "^3.0.18",
     "@aws-lambda-powertools/logger": "^2.30.2",
     "@aws-sdk/client-dynamodb": "^3.975.0",
     "@aws-sdk/client-ssm": "^3.975.0",
     "@aws-sdk/lib-dynamodb": "^3.975.0",
     "@aws-sdk/util-dynamodb": "^3.975.0",
-    "@mastra/core": "^0.24.9",
-    "@mastra/libsql": "^0.16.4",
-    "@mastra/loggers": "^0.10.19",
-    "@mastra/mcp": "^0.14.5",
-    "@mastra/memory": "^0.15.13",
+    "@mastra/core": "^1.0.4",
+    "@mastra/langfuse": "^1.0.0",
+    "@mastra/libsql": "^1.0.0",
+    "@mastra/loggers": "^1.0.0",
+    "@mastra/mcp": "^1.0.0",
+    "@mastra/memory": "^1.0.0",
+    "@mastra/observability": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.25.3",
     "aws-cdk-lib": "^2.236.0",
     "constructs": "^10.4.5",
@@ -62,8 +64,7 @@
     "express": "^5.2.1",
     "hono": "^4.11.5",
     "jose": "^6.1.3",
-    "langfuse-vercel": "^3.38.6",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
     "zod": "^4.3.6"
   }
 }
