--- a/platform/package.json
+++ b/platform/package.json
@@ -24,45 +24,46 @@
     "@types/aws-lambda": "^8.10.160",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.6",
-    "@types/node": "^24.10.10",
+    "@types/node": "^24.10.12",
     "@vitest/coverage-v8": "^4.0.18",
-    "aws-cdk": "^2.1104.0",
+    "aws-cdk": "^2.1105.0",
     "cdk-ecr-deployment": "^4.1.0",
-    "esbuild": "^0.27.2",
+    "esbuild": "^0.27.3",
     "eslint": "^9.39.2",
     "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-awscdk": "^4.1.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-promise": "^7.2.1",
     "jiti": "^2.6.1",
-    "mastra": "^1.1.0",
+    "mastra": "^1.2.0",
     "tslib": "^2.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0",
-    "vite-tsconfig-paths": "^6.0.5",
+    "vite-tsconfig-paths": "^6.1.0",
     "vitest": "^4.0.18"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^4.0.48",
-    "@ai-sdk/azure": "^3.0.26",
+    "@ai-sdk/amazon-bedrock": "^4.0.51",
+    "@ai-sdk/azure": "^3.0.27",
     "@aws-lambda-powertools/logger": "^2.30.2",
-    "@aws-sdk/client-dynamodb": "^3.982.0",
-    "@aws-sdk/client-ssm": "^3.982.0",
-    "@aws-sdk/lib-dynamodb": "^3.982.0",
-    "@aws-sdk/util-dynamodb": "^3.982.0",
-    "@mastra/core": "^1.1.0",
-    "@mastra/langfuse": "^1.0.1",
-    "@mastra/libsql": "^1.1.0",
+    "@aws-sdk/client-dynamodb": "^3.985.0",
+    "@aws-sdk/client-ssm": "^3.985.0",
+    "@aws-sdk/lib-dynamodb": "^3.985.0",
+    "@aws-sdk/util-dynamodb": "^3.985.0",
+    "@mastra/core": "^1.2.0",
+    "@mastra/langfuse": "^1.0.2",
+    "@mastra/libsql": "^1.2.0",
     "@mastra/loggers": "^1.0.1",
     "@mastra/mcp": "^1.0.0",
-    "@mastra/memory": "^1.0.1",
-    "@mastra/observability": "^1.1.0",
+    "@mastra/memory": "^1.1.0",
+    "@mastra/observability": "^1.2.0",
     "@modelcontextprotocol/sdk": "^1.26.0",
     "aws-cdk-lib": "^2.237.1",
     "constructs": "^10.4.5",
     "crypto-js": "^4.2.0",
     "express": "^5.2.1",
-    "hono": "^4.11.7",
+    "hono": "^4.11.9",
     "jose": "^6.1.3",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
