--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,11 +12,8 @@ onlyBuiltDependencies:
   - unrs-resolver
 
 overrides:
-  ai@<5.0.52: '>=5.0.52'
-  axios@=1.10.0: '>=1.11.0'
-  fast-xml-parser@>=4.3.6 <=5.3.3: '>=5.3.4'
-  glob@>=10.3.7 <=11.0.3: '>=11.1.0'
-  hono@>=4.8.0 <4.9.6: '>=4.9.6'
-  jsondiffpatch@<0.7.2: '>=0.7.2'
-  seroval@<1.4.1: '>=1.4.1'
-  seroval@<=1.4.0: '>=1.4.1'
+  # eslint: ">=10.0.0"
+  # '@eslint/js': ">=10.0.0"
+  eslint: "^9"
+  '@eslint/js': "^9"
+  '@stylistic/eslint-plugin': '>=5.0.0'
