--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,8 +12,8 @@ onlyBuiltDependencies:
   - unrs-resolver
 
 overrides:
-  # eslint: ">=10.0.0"
-  # '@eslint/js': ">=10.0.0"
-  eslint: "^9"
-  '@eslint/js': "^9"
+  '@eslint/js': ^9
   '@stylistic/eslint-plugin': '>=5.0.0'
+  ajv@<8.18.0: '>=8.18.0'
+  eslint: ^9
+  fast-xml-parser@>=4.1.3 <5.3.6: '>=5.3.6'
