--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,6 +14,8 @@ onlyBuiltDependencies:
 overrides:
   '@eslint/js': ^9
   '@stylistic/eslint-plugin': '>=5.0.0'
+  '@eslint/eslintrc>ajv': ^6.12.4
   ajv@<8.18.0: '>=8.18.0'
+  eslint>ajv: ^6.12.4
   eslint: ^9
   fast-xml-parser@>=4.1.3 <5.3.6: '>=5.3.6'
