--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,3 +20,4 @@ overrides:
   eslint>ajv: ^6.12.4
   fast-xml-parser@>=4.1.3 <5.3.6: '>=5.3.6'
   minimatch@<10.2.1: '>=10.2.1'
+  rollup@>=4.0.0 <4.59.0: '>=4.59.0'
